--- a/css/home.css
+++ b/css/home.css
@@ -141,6 +141,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;  
+    vertical-align: auto;
 }
   
 .skill {
@@ -154,7 +155,7 @@
 }
 
 .skill img {
-  width: 70%;
+  width: 60%;
   height: auto;
   opacity: 1;
   margin: 1rem auto;
